fix: change timeline wrapper margin on mobile

--- a/src/components/Process/process.module.scss
+++ b/src/components/Process/process.module.scss
@@ -98,10 +98,11 @@
     flex-direction: column;
     align-items: center;
     position: relative;
-    margin-top: 70px;
+    margin-top: 28px;
     max-width: 1032px;
 
     @include mediumScreen() {
+      margin-top: 70px;
       margin-left: 30px;
     }
 
